web - fix hero bg on mobile

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -191,8 +191,8 @@ body {
 @media (max-width: 640px) {
     .custom-hero-background {
         background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.5' numOctaves='1' stitchTiles='stitch'/%3E%3CfeComponentTransfer%3E%3CfeFuncR type='table' tableValues='1 1'/%3E%3CfeFuncG type='table' tableValues='1 1'/%3E%3CfeFuncB type='table' tableValues='1 1'/%3E%3C/feComponentTransfer%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)' opacity='0.06'/%3E%3C/svg%3E"),
-            radial-gradient(circle at 40% 65%, #fbe1a6 0px, transparent 50%),
-            radial-gradient(circle at 60% 25%, #f9d4a0 0px, transparent 50%),
+            radial-gradient(circle at 40% 65%, #fcf0d1 0px, transparent 50%),
+            radial-gradient(circle at 60% 25%, #fdecd8 0px, transparent 50%),
             linear-gradient(
                 to bottom,
                 rgba(255, 255, 255, 0) 55%,
